# advent-of-code

./: .gitignore  .isort.cfg  Cargo.toml  README.md  go.mod  mypy.ini  pyproject.toml
aoc_2022/day_1/: calorie_counting.py  part_2.py
aoc_2022/day_10/: part_1.py  part_2.py
aoc_2022/day_11/: part_1.py  part_2.py
aoc_2022/day_12/: part_1.py  part_2.py
aoc_2022/day_13/: part_1.py  part_2.py
aoc_2022/day_19/: not_enough_minerals.py
aoc_2022/day_2/: part_2.py  rock_paper_scissors.py
aoc_2022/day_3/: part_2.py  rucksack.py
aoc_2022/day_4/: camp_cleanup.py  part_2.py
aoc_2022/day_5/: part_2.py  supply_stacks.py
aoc_2022/day_6/: part_2.py  tuning_trouble.py
aoc_2022/day_7/: no_space.py  part_2.py
aoc_2022/day_8/: part_2.py  treetop_tree_house.py
aoc_2022/day_9/: part_2.py  rope_bridge.py
aoc_2023/day_1/: part_2.py  part_2.rs  trebuchet.py  trebuchet.rs
aoc_2023/day_10/: part_2.rs  pipe_maze.rs
aoc_2023/day_11/: cosmic.py  part_2.py
aoc_2023/day_12/: hot_springs.py  part_2.py
aoc_2023/day_13/: part_2.py  point_of_incidence.py
aoc_2023/day_14/: parabolic.py  part_2.py
aoc_2023/day_15/: lens_library.py  part_2.py
aoc_2023/day_16/: lava.py  part_2.py
aoc_2023/day_17/: clumsy_crucible.py  part_2.py
aoc_2023/day_18/: part_1.py  part_2.py
aoc_2023/day_19/: part_1.py  part_2.py
aoc_2023/day_2/: cube_conundrum.py  part_2.py
aoc_2023/day_20/: part_1.py  part_2.py
aoc_2023/day_21/: part_1.py  part_2.py
aoc_2023/day_22/: part_1.py  part_2.py
aoc_2023/day_23/: part_1.py  part_2.py  part_2.rs
aoc_2023/day_24/: part_1.py  part_2.py
aoc_2023/day_25/: part_1.py
aoc_2023/day_3/: gear_ratios.py  part_2.py
aoc_2023/day_4/: part_2.py  scratchcards.py
aoc_2023/day_5/: fertilizer.py  part_2.py
aoc_2023/day_6/: part_2.rs  wait_for_it.rs
aoc_2023/day_7/: camel.rs  part_2.rs
aoc_2023/day_8/: haunted_wasteland.rs  part_2.rs
aoc_2023/day_9/: mirage.rs  part_2.rs
aoc_2024/day_1/: p1.go  p2.go  part_1.py  part_2.py
aoc_2024/day_10/: part_1.py  part_2.py
aoc_2024/day_11/: part_1.py  part_2.py
aoc_2024/day_12/: part_1.py  part_2.py
aoc_2024/day_13/: part_1.py  part_2.py
aoc_2024/day_14/: part_1.py  part_2.py
utils/: file.go  file.py  file.rs  helpers.go  helpers.py  helpers_test.go  sliceHelpers.go  types.py
webpage/: .gitignore  README.md  download  serve
(+50 files in other folders)
