[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"

[[bin]]
name = "day_1"
path = "aoc_2023/day_1/trebuchet.rs"

[[bin]]
name = "day_1p2"
path = "aoc_2023/day_1/part_2.rs"
