[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.2"

[[bin]]
name = "day_1"
path = "aoc_2023/day_1/trebuchet.rs"

[[bin]]
name = "day_1p2"
path = "aoc_2023/day_1/part_2.rs"

[[bin]]
name = "day_6"
path = "aoc_2023/day_6/wait_for_it.rs"

[[bin]]
name = "day_6p2"
path = "aoc_2023/day_6/part_2.rs"

[[bin]]
name = "day_7"
path = "aoc_2023/day_7/camel.rs"

[[bin]]
name = "day_7p2"
path = "aoc_2023/day_7/part_2.rs"

[[bin]]
name = "day_8"
path = "aoc_2023/day_8/haunted_wasteland.rs"

[[bin]]
name = "day_8p2"
path = "aoc_2023/day_8/part_2.rs"

[[bin]]
name = "day_9"
path = "aoc_2023/day_9/mirage.rs"

[[bin]]
name = "day_9p2"
path = "aoc_2023/day_9/part_2.rs"
